# tensorpack

./: .gitignore  Apply CP to SARS-CoV-2 Serology Dataset.ipynb  README.md  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  pytest.yml
tensorpac/: __init__.py  ccle.py  cmtf.py  cp.py  decomposition.py  figures.py  import_COVID.py  mode.py  soft_impute.py  tensor.py
tensorpac/test/: test_ccle.py  test_cmtf.py
tensorpack/: SVD_impute.py  __init__.py  cmtf.py  coupled.py  decomposition.py  decomposition_test.py  figureCommon.py  figures.py  impute.py  linalg.py  plot.py  pyproject.toml  soft_impute.py  tpls.py  tucker.py  xplots.py
tensorpack/comparative/: direct_opt.py  tensorly_als.py  tracker.py
tensorpack/test/: atyeo.py  atyeo_covid.csv  common.py  test_cmtf.py  test_coupled.py  test_decomposition.py  test_figures.py  test_impute.py  test_linalg.py  test_tpls.py  testcase.py
