[tool.poetry]
name = "tensorpack"
version = "0.1.0"
description = "A collection of tensor methods from the Meyer lab."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21"
tensorly = "^0.7"
matplotlib = "^3.5.0"
tqdm = "^4.62.3"
seaborn = "^0.11.2"
svgutils = "^0.3.4"
xarray = "^2022.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0.0"
tensordata = {git = "https://github.com/meyer-lab/tensordata.git", branch = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
