[tool.poetry]
name = "tensorpack"
version = "0.1.2"
description = "A collection of tensor methods from the Meyer lab."
authors = ["Cyrillus Tan <cyztan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.21"
tensorly = ">=0.8"
matplotlib = ">=3.5.0"
tqdm = ">=4.62.3"
seaborn = ">=0.11.2"
svgutils = "^0.3.4"
xarray = "^2024"
scikit-learn = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
tensordata = { git = "https://github.com/meyer-lab/tensordata.git", branch = "main" }
pyright = "^1.1.379"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
